# games

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Cargo.toml  Directory.Build.props  Directory.Packages.props  README.md  build.cmd  dirs.proj  games.sln  global.json  sln.cmd
.cargo/: config.toml
data/: words.txt
letter_boxed_solver/: Cargo.toml
letter_boxed_solver/src/: core.rs  lib.rs  main.rs  search.rs  trie.rs
src/: dirs.proj
src/LetterBoxedSolver/: LetterBoxedSolver.csproj  Solver.cs
src/LetterBoxedSolver.Native/: LetterBoxedSolver.Native.vcxproj  LetterBoxedSolver.Native.vcxproj.bak  LetterBoxedSolver.cpp
src/Shapes.Core/: Nmbr.cs  NmbrBoard.cs  Point.cs
src/Words.Benchmark/: FindTrie.cs  FindWords.cs  LoadTrie.cs  LoadTrieBase.cs  Program.cs  Words.Benchmark.csproj
src/Words.Benchmark.Native/: Main.cpp  Words.Benchmark.Native.vcxproj
src/Words.Core/: Ch.cs  Class1.cs  LetterBox.cs  LetterBoxSearch.cs  LetterBoxStr.cs  LetterBoxStrSearch.cs  LetterBoxStrWords.cs  LetterBoxWords.cs  Str.cs  StrTrie.cs  StringTrie.cs  Words.Core.csproj
src/Words.Native.Core/: Hashtable.h  LetterBoxStr.cpp  LetterBoxStr.h  LetterBoxStrSearch.cpp  LetterBoxStrSearch.h  LetterBoxStrWords.cpp  LetterBoxStrWords.h  Sample.cpp  Sample.h  Stopwatch.cpp  Stopwatch.h  Str.cpp  Str.h  StrTrie.cpp  StrTrie.h  Vertices.h  Words.Native.Core.vcxproj
test/: dirs.proj
test/Shapes.Test/: NmbrBoardTest.cs  NmbrTest.cs  PointTest.cs  Shapes.Test.csproj
test/Words.Native.Test/: HashtableTest.cpp  LetterBoxStrSearchTest.cpp  LetterBoxStrTest.cpp  LetterBoxStrWordsTest.cpp  (+5 more)
(+12 files in other folders)
